--- a/wxParse/wxParse.wxss
+++ b/wxParse/wxParse.wxss
@@ -72,17 +72,17 @@ view{
 
 .wxParse-code,.wxParse-wxxxcode-style{
     text-indent:0;
-    border-color:#000;
-    border-style:dashed;
+    /*border-color:#000;*/
+    /*border-style:dashed;*/
     border-width:1px;
     display:block;
     font-size:12px;
     font-family:Courier, Calibri,"宋体";
     margin:10px 0 0 0;
-    padding:10px 0 10px 5px;
+    padding:10px 0 10px 10px;
     border-radius:5px;
-    background:#f5f5f5;
-    color:#000;
+    background:#555;
+    color:#fefefe;
     overflow: hidden;
 }
 
